--- a/style.css
+++ b/style.css
@@ -132,10 +132,100 @@
     padding-bottom: 50px;
 }
 .actor-contain{
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-column-gap:20px;
+    grid-template-columns: auto auto auto;
+    padding: 40px;
 }
 .photo1{
-    align-items: center;
-    border-radius: 200%;
+    padding-left: 100px;  
+}
+.round{
+    border-radius: 100px;
+}
+.work{
+    text-align: center;
+    padding-right: 40px;
+}
+.ppt{
+    text-align: justify;
+}
+.photo2{
+    padding-left: 100px;
+}
+.round1{
+    height: 80px;
+    width: 80px;
+    border-radius: 100px;
+}
+.photo3{
+    padding-left: 80px;
+}
+.repeat{
+    background-color:  rgb(251, 251, 251) ;
+    padding:25px 25px 25px 40px;
+    display: flex;
+    justify-content: space-evenly;
+}
+#box{
+    background-color:  #353535;
+}
+.box1{
+    display: flex;
+    justify-content: center;
+}
+.bigbox{
+    color: #fff;
+    padding-right: 50px;
+    padding-left: 20px;
+}
+.box2{
+    background-color: rgb(67, 67, 67);
+    display: flex;
+}
+.fingar1{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-column-gap: 22px;
+    padding-right: 15%;
+    padding-left: 18%;
+    margin-top: 50px;
+}
+.f2{
+    margin-left: 50px;
+}
+.f3{
+    color:white;
+    font-weight: bolder;
+    font-size: medium;
+    margin-left: 37px;
+}
+.bill{
+    color:white;
+    font-weight: bolder;
+    font-size: medium;
+}
+.app{
+    color: white;
+    font-size: smaller;
+}
+.up1{
+    color:white ;
+    font-size:smaller;
+    list-style: none;
+    margin-right: 10px;
+    font-weight: lighter;
+    padding-bottom: 5px;
+    
+}
+.call{
+    height: 20px;
+    position: relative;
+}
+.MY{
+    text-align: center;
+    font-size:10px;
+    color: white;
+    padding-top: 75px;
+    padding-bottom: 15px;
 }
